Fixed navigation bar from wrapping

--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -77,7 +77,7 @@
 
   .navbar-nav .nav-item {
     padding-right: .25rem;
-    font-size: .60rem;
+    font-size: .57rem;
   }
 }
 
